use bird instead of mole

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <div class="mole">
         </div>
       </div>
-      
+
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
