Made score update work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <body>
     <h1>Whack-a-mole game!  </h1>
     <h2>Score: <span class="score">0</span> </h2>
-    <button onClick="startGame()">Begin</button>
+
+    <br>
+    <br>
+
+    <div>
+      <button onClick="startGame()">Begin</button>
+    </div>
 
     <div class="game">
 
