Add countdown timer

--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Whack a mole game</title>
+    <title>Whack a bird game</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Whack-a-mole game!  </h1>
+    <h1>Whack-a-bird game!  </h1>
+
     <h2>Score: <span class="score">0</span> </h2>
 
-    <br>
-    <br>
 
     <div>
       <button onClick="startGame()">Begin</button>
     </div>
+
+    <br>
+    <div class="time">Time = <span id="timer">1:00</span> </div>
 
     <div class="game">
 
